Material 3 Expressive Icon Shape (#5605)
* M3E Shape

Signed-off-by: Pun Butrach <pun.butrach@gmail.com>

* codespace

* Merge ci/backport-16-dev_material-expressive-shape to designated
upstream

Signed-off-by: Pun Butrach <pun.butrach@gmail.com>

* Merge incoming to codespace

* ok ok you win spotless

Signed-off-by: Pun Butrach <pun.butrach@gmail.com>

---------

Signed-off-by: Pun Butrach <pun.butrach@gmail.com>

--- a/lawnchair/res/values/strings.xml
+++ b/lawnchair/res/values/strings.xml
@@ -264,6 +264,10 @@
     <string name="icon_shape_square">Square</string>
     <string name="icon_shape_squircle">Squircle</string>
     <string name="icon_shape_teardrop">Teardrop</string>
+    <!-- Icon shape (Material 3 Expressive) -->
+    <string name="icon_shape_four_sided_cookie">Four-sided cookie</string>
+    <string name="icon_shape_seven_sided_cookie">Seven-sided cookie</string>
+    <string name="icon_shape_arch">Arch</string>
 
     <!-- Custom icon shapes -->
     <string name="custom_icon_shape">Custom icon shape</string>
