refactor(about): migrate screen to ViewModel and UDF (#5698)
* feat(about): add viewmodel and UDF state models

* feat(about): add new repository and service

* feat(about): refactor About screen and related components

* refactor(about): remove legacy update checker file

* refactor(about): improve robustness of NightlyBuildsRepository

This change also tweaks the code to use application storage instead of external storage.

* refactor(acknowledgements): simplify Acknowledgements implementation

* fix(about): add missing strings

* refactor(acknowledgements): apply suggestions from review

* refactor(about): simplify nightly builds repository

* refactor(about): apply changes from review

* refactor(acknowledgements): apply changes from review

* fixup: apply review suggestions from Goooler

--- a/lawnchair/res/values/strings.xml
+++ b/lawnchair/res/values/strings.xml
@@ -457,6 +457,10 @@
     <string name="translate">Translate</string>
     <string name="donate">Donate</string>
 
+    <string name="contributor_status_active">Active</string>
+
+    <string name="update_check_failed">Failed to check for updates</string>
+
     <!--
 
     Backup and restore
